--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flame: ^0.29.4
+  sensors_plus: ^1.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
